[gd_scene load_steps=2 format=2]

[ext_resource path="res://tools/CameraShake.gd" type="Script" id=1]

[node name="ScreenShake" type="Node2D" groups=["screen_shake"]]
script = ExtResource( 1 )

[node name="ShakeTween" type="Tween" parent="."]

[node name="Frequency" type="Timer" parent="."]
wait_time = 0.1

[node name="Duration" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Frequency" to="." method="_onFrequencyTimeout"]
[connection signal="timeout" from="Duration" to="." method="_onDurationTimeout"]
